--- a/templates/navbar.twig
+++ b/templates/navbar.twig
@@ -1,8 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
     <a class="navbar-brand col-lg-2 col-md-3 col-6 px-0" href="/">
+        {% set logoBrand = globalLogo.logoBrand.one() %}{% set logo =
+        globalLogo.logo.one() %}
         <img
-            class="col-12 px-0 d-inline-block align-top"
-            src="/resources/logo.png"
+            class="col-12 px-0 d-inline-block
+        align-top"
+            src="{{ logoBrand.url }}"
             alt=""
             fluid
         />
