--- a/templates/index.twig
+++ b/templates/index.twig
@@ -6,6 +6,11 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shirnk-to-fit=no"
         />
+        <meta
+            name="keywords"
+            content="Asociacion deportiva, curridabat, tiro con arco, deporte, jose maria zeledon, adearco, deporte, costa rica, niños, adolescentes"
+        />
+        <meta name="description" content="{{ entry.welcomeMessage }}" />
         <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
         <link
             rel="stylesheet"
