--- a/templates/informacion.twig
+++ b/templates/informacion.twig
@@ -6,6 +6,10 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shirnk-to-fit=no"
         />
+        <meta
+            name="keywords"
+            content="Asociacion deportiva, curridabat, tiro con arco, deporte, jose maria zeledon, adearco, costa rica, informacion, deporte, ubicacion, precio, niños, adolescentes"
+        />
         <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
         <link
             rel="stylesheet"
